# PostgresAndPython

./: pyproject.toml  requirements.txt
code/: SQL_analysis.py  dataFromDate.py  getDataFromIexCloud.py  plotFromDate.py  postgres_database.py  test_main.py
code/save_results/files/: aapl_chart_2021-03-22.csv  aapl_chart_2021-03-24.csv
