[tool.poetry]
name = "muttdata_exam"
version = "0.1.0"
description = ""
authors = ["oviedohector <heoviedo@everis.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
requests = "^2.27.1"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
psycopg2 = "^2.9.3"
pytest = "^6.2.5"


[tool.poetry.dev-dependencies]
pandas="1.4.0"
sqlalchemy="1.4.31"
sqlalchemy_utils="0.38.2"
requests="2.27.1"
psycopg2="2.9.3"
matplotlib = "3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
